--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "react": "^18.2.0",
+        "react-copy-to-clipboard": "^5.1.0",
         "react-dom": "^18.2.0",
         "react-markdown": "^9.0.0",
         "tailwindcss": "^3.3.5",
@@ -24,6 +25,7 @@
     },
     "devDependencies": {
         "@types/cors": "^2.8.16",
+        "@types/react-copy-to-clipboard": "^5.0.7",
         "concurrently": "^8.2.2",
         "css-loader": "^6.8.1",
         "html-webpack-plugin": "^5.5.3",
